--- a/MeditationTrackerREST/src/main/webapp/index.html
+++ b/MeditationTrackerREST/src/main/webapp/index.html
@@ -7,15 +7,27 @@
 </head>
 <body>
 	<h1>Welcome to meditation tracker</h1>
-
+	<br>
+	<br>
+	<div id="ticker" name="ticker" class="ticker">
+			<table>
+				<tr>
+					
+			</table>
+	</div>
 	<form name="meditationForm">
 		<input type="number" name="meditationId">
 		<button name="lookup">Get Meditation by Id</button>
 	</form>
-	<form name="deleteMeditation">
-		<input type="number" name="meditationId">
-		<button name="delete">Delete</button>
+	<br>
+	<div id="delete">
+		<form name='deleteMeditationForm'>
+			ID: <input name='id' type='number'><br>
+			<button class="btn btn-danger" id='deleteMeditation'>Delete Meditation</button>
 	</form>
+	</div>
+	
+	
 	<div id="output">
 		<div id="meditationData"></div>
 	</div>
@@ -30,6 +42,19 @@
 			Feeling Rate:<input name='feelingRate' type='number'><br>
 			<button id='addMeditation'>Add Meditation</button>
 		</form>
+		<br>
+		<div id='updateMeditationDiv'>
+			<form name='updateMeditationForm'>
+				ID:<input name='id' type='number'><br>
+				Name:<input name='name' type='text'><br>
+				Goal:<input name='goal' type='text'><br> 
+				Time Spent:<input name='timeSpent' type='number'><br>
+				Recommended Time:<input name='recommendedTime' type='number'><br> 
+				Feeling Rate:<input name='feelingRate' type='number'><br>
+				<button class="btn btn-primary" id='updateMeditation'>Update Meditation</button>
+			</form>
+		</div>
+				
 	</div>
 		
 
